fixed-statement-gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -501,6 +501,7 @@ nav ul ul {
 	width:100%;
 	justify-content: space-between;
 	margin-top: 15px;
+	gap: 10px;
   }
   
 
